--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,22 @@
 {
-    "name": "mpociot/versionable",
+    "name": "lucidlemon/versionable",
     "license": "MIT",
     "description": "Allows to create Laravel 4 / 5 Model versioning and restoring",
     "keywords": ["model", "laravel", "ardent", "version", "history"],
-    "homepage": "http://github.com/mpociot/versionable",
+    "homepage": "http://github.com/lucidlemon/versionable",
     "authors": [
+        {
+          "name": "Daniel Winter",
+          "email": "dev@danielwinter.at"
+        },
         {
             "name": "Marcel Pociot",
             "email": "m.pociot@gmail.com"
         }
     ],
     "support": {
-        "issues": "https://github.com/mpociot/versionable/issues",
-        "source": "https://github.com/mpociot/versionable"
+        "issues": "https://github.com/lucidlemon/versionable/issues",
+        "source": "https://github.com/lucidlemon/versionable"
     },
     "require": {
         "php": ">=5.3.0",
@@ -23,7 +27,7 @@
             "src/migrations"
         ],
         "psr-0": {
-            "Mpociot\\Versionable": "src/"
+            "Lucidlemon\\Versionable": "src/"
         }
     }
 }
